--- a/styles.css
+++ b/styles.css
@@ -14,16 +14,53 @@ body {
   flex-wrap: wrap;
   width: 60%;
   height: 100vh;
-  /*border: pink solid 2px;*/
 }
 
 .box {
   display: flex;
   justify-content: center;
   align-items: center;
-  flex-direction: column;
   width: 33.333%;
-  box-sizing: border-box;
+  flex-direction: column;
+  height: 33.333%;
+}
+
+.button-container {
+  display: flex;
+  width: 100%;
+  padding-top: 25px;
+}
+
+button {
+  display: flex;
+  font-size: 16px;
+  background: #646F58;
+  border: 2px solid #fff;
+  color: #fff;
+  padding: 10px;
+  cursor: pointer;
+  width: 120px;
+  align-items: center;
+  padding-left: 10px;
+}
+
+.about {
+  margin-right: 30px;
+}
+
+.info,
+.contact {
+  justify-content: flex-start;
+  width: 20px;
+  height: 20px;
+}
+
+.info {
+  margin: 0 10px 0 5px;
+}
+
+.contact {
+  margin: 0 5px 0 0;
 }
 
 .icon {
@@ -34,6 +71,45 @@ body {
   background-size: cover;
 }
 
+.icon:hover {
+  cursor: pointer;
+}
+
+.icon1 {
+  background: url(assets/fox.svg) no-repeat center;
+  background-size: cover;
+}
+
+.icon2 {
+  background: url(assets/paws.svg) no-repeat center;
+  background-size: cover;
+}
+
+.icon3 {
+  background: url(assets/trees.svg) no-repeat center;
+  background-size: cover;
+}
+
+.icon4 {
+  background: url(assets/dislike.svg) no-repeat center;
+  background-size: cover;
+}
+
+.icon5 {
+  background: url(assets/taco.svg) no-repeat center;
+  background-size: cover;
+}
+
+.icon6 {
+  background: url(assets/tv.svg) no-repeat center;
+  background-size: cover;
+}
+
+.icon7 {
+  background: url(assets/nap.svg) no-repeat center;
+  background-size: cover;
+}
+
 .title {
   font-size: 24px;
   font-weight: 700;
@@ -41,25 +117,23 @@ body {
 }
 
 .div1 {
-  /*padding: 30px;*/
+  padding: 0 30px 0 30px;
   width: 66.6667%;
-  background: blue;
-  background-size: cover;
-  /*justify-content: flex-start;*/
+  background: #646F58;
   align-items: flex-start;
   line-height: 25px;
 }
 
 .div2 {
-  background: pink;
+  background: #AFBE8F;
 }
 
 .div3 {
-  background: green;
+  background: #273C2C;
 }
 
 .div4 {
-  background: purple;
+  background: #504B3A;
 }
 
 .div5 {
@@ -67,31 +141,90 @@ body {
 }
 
 .div6 {
-  background: brown;
+  background: #AFBE8F;
 }
 
 .div7 {
-  background: green;
+  background: #273C2C;
 }
 
 .div8 {
-  background: blue;
+  background: #646F58;
 }
 
 .body-container {
   display: flex;
   width: 100%;
-  /*height: 100vh;*/
 }
 
 .hero-container {
   width: 40%;
-  /*border: blue solid 2px;*/
-  /*height: 100vh;*/
 }
 
 .hero {
-  background: url(assets/hero.jpg) no-repeat;
+  background: url(assets/hero.jpg) no-repeat center;
   background-size: cover;
   height: 100vh;
+}
+
+@media screen and (max-width: 910px) {
+
+  .box {
+    width: 50%;
+    height: 16.65%;
+  }
+
+  .div1,
+  .div2 {
+    width: 100%;
+  }
+
+  .div1 {
+    height: 33.3333%;
+  }
+
+  .hero {
+    background-position: -150px 0px;
+  }
+}
+
+@media screen and (max-width: 720px) {
+
+  .body-container {
+    height: 100%;
+    flex-wrap: wrap;
+  }
+
+  .hero-container {
+    display: flex;
+    order: -1;
+    height: 250px;
+    width: 100%;
+  }
+
+  .hero {
+    height: 250px;
+    width: 100%;
+    background-position: center;
+  }
+
+  .boxes-container {
+    width: 100%;
+  }
+}
+
+@media screen and (max-width: 400px) {
+  .box {
+    width: 100%;
+  }
+
+  .icon {
+    width: 40px;
+    height: 40px;
+    margin-bottom: 10px;
+  }
+
+  .title {
+    padding-bottom: 10px;
+  }
 }
